Add Google OAuth, fix connect-mongo, add cors
