# routes/movies.js
@@ -7,11 +7,12 @@ const {
   updateMovie,
   deleteMovie
 } = require('../controllers/movies');
+const isAuthenticated = require('./middleware/isAuthenticated');
 
 router.get('/', getAllMovies);
 router.get('/:id', getMovieById);
-router.post('/', createMovie);
-router.put('/:id', updateMovie);
-router.delete('/:id', deleteMovie);
+router.post('/', isAuthenticated, createMovie);
+router.put('/:id', isAuthenticated, updateMovie);
+router.delete('/:id', isAuthenticated, deleteMovie);
 
 module.exports = router;
