# routes/tvshows.js
@@ -7,11 +7,12 @@ const {
   updateTvshow,
   deleteTvshow
 } = require('../controllers/tvshows');
+const isAuthenticated = require('./middleware/isAuthenticated');
 
 router.get('/', getAllTvshows);
 router.get('/:id', getTvshowById);
-router.post('/', createTvshow);
-router.put('/:id', updateTvshow);
-router.delete('/:id', deleteTvshow);
+router.post('/', isAuthenticated, createTvshow);
+router.put('/:id', isAuthenticated, updateTvshow);
+router.delete('/:id', isAuthenticated, deleteTvshow);
 
 module.exports = router;
